# adc24-demos

./: .gitmodules  README.md
src/: .gitignore  CMakeLists.txt  README.md
src/plugin/: CMakeLists.txt
src/plugin/include/JuceWebViewPlugin/: PluginEditor.h  PluginProcessor.h
src/plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
web/: package-lock.json
web/plugin-webui/: LICENSE  README.md  index.html  package-lock.json  package.json
web/plugin-webui/.storybook/: main.js  manager.js  preview.js
web/plugin-webui/src/: plugin-webui.ts  rotary.ts
web/plugin-webui/stories/: plugin-webui.stories.ts  rotary.stories.ts
web/plugin-webui/test/: plugin-webui.test.ts
